--- a/pages/cv.html
+++ b/pages/cv.html
@@ -60,7 +60,7 @@
                                     <a role="menuitem" href="appliandroid.html">Application Android</a>
                                 </li>
                                 <li role="presentation" class="dropdown-item">
-                                    <a role="menuitem" href="#">Site web</a>
+                                    <a role="menuitem" href="jeux.html">Jeux</a>
                                 </li>
                                 <li role="presentation" class="dropdown-item">
                                     <a role="menuitem" href="#">Études et analyses</a>
