--- a/pages/jeux.html
+++ b/pages/jeux.html
@@ -134,11 +134,9 @@
         <!------------------------------------------------ Contenu principal ------------------------------------------------>
         <section class="jumbotron text-center">
             <div class="container">
-                <h1 class="jumbotron-heading">Programmation sous Android</h1>
-                <p class="lead text-muted">Cette activité m'a permis de développer une
-                    application Android avec différents modes de persistances (locales et
-                    distantes) et m'a appris à gérer les adapters. J'ai également pu connaître
-                    le mode de déploiement d'une application Android.
+                <h1 class="jumbotron-heading">Jeux</h1>
+                <p class="lead text-muted">Ici ce trouve l'enssemble des projet que j'ai réaliser durant,
+                    Certificat "Gold" Introduction a la creation de Jeux Videos proposé par "XAMK South-Eastern Finland University of Applied Sciences".
                 </p>
             </div>
         </section>
@@ -147,26 +145,25 @@
                 <div class="row">
                     <div class="col-md-4">
                         <div class="card mb-4 shadow-sm">
-                            <img class="card-img-top" src="image a rajouter" alt="IHM Coach">
+                            <img class="card-img-top" src="../images/theReturn_gameplay.png" alt="Gameplay du jeu The Return">
                             <div class="card-body">
-                                <p class="card-text">The Return - Jeu textuel</p>
+                                <a class="card-text" href ="https://github.com/Ralh19/TheReturn.git">The Return - Jeu textuel</a>
                             </div>
                         </div>
                     </div>
                     <div class="col-md-4">
                         <div class="card mb-4 shadow-sm">
-                            <img class="card-img-top" src="image a rajouter"
-                                 alt="Structuration MVC">
+                            <img class="card-img-top" src="../images/merlin_gameplay.png" alt="Gameplay du jeu Merlin's Demon War">
                             <div class="card-body">
-                                <p class="card-text">Merlin's Demon War - Jeu de carte interactif</p>
+                                <a class="card-text" href="https://github.com/Ralh19/Merlin-s-Demon-War.git"  >Merlin's Demon War - Jeu de carte interactif</a>
                             </div>
                         </div>
                     </div>
                     <div class="col-md-4">
                         <div class="card mb-4 shadow-sm">
-                            <img class="card-img-top" src="image a rajouter" alt="Adapters">
+                            <img class="card-img-top" src="../images/androidSnake_gameplay.jpeg" alt="Gameplay du jeu snake sur mobile">
                             <div class="card-body">
-                                <p class="card-text">Snake - Jeu Mobile Arcade</p>
+                                <a class="card-text" href="https://github.com/Ralh19/SnakeGame.git">Snake - Jeu Mobile Arcade</a>
                             </div>
                         </div>
                     </div>
@@ -179,29 +176,26 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-4">
-                        <h2>Étudiante du CNED</h2>
-                        <p>J'ai choisi de suivre le BTS SIO à distance par le Centre National
-                            d'Enseignement à Distance car je souhaitais pourvoir avancer à mon rythme,
-                            choisir moi-même mon emploi du temps, apprendre à être autonome, pouvoir
-                            utiliser les outils de collaboration à distance et devenir plus responsable en
-                            étant capable de me fixer moi-même des contraintes, des limites et des
-                            objectifs à atteindre !
-                        </p>
+                        <h2>Étudiant au Lycée Bonaparte - Toulon</h2>
+                        <p>J'ai choisi de suivre le BTS SIO au Lycée Bonaparte, situé dans la ville de Toulon, 
+                            dans le but d'élargir mes connaissances dans le domaine de l'informatique, 
+                            notamment dans le développement, qui est le sujet qui m'intéresse le plus.
+                            Cette formation va aussi contribuer a me professionnaliser au maximum 
+                            afin d'être le plus compétent possible lors de mon ascension dans le monde du travail.
                         <p><a class="btn btn-secondary" href="http://www.cned.fr" target="_blank"
                               role="button">En savoir plus »</a>
                         </p>
                     </div>
                     <div class="col-lg-4">
                         <h2>Le BTS SIO</h2>
-                        <p>Passionnée d'informatique depuis mon plus jeune âge, j'aime apprendre à faire
-                            de nouvelles choses avec mon ordinateur, mon smartphone ou ma tablette. Une
-                            Geek ? Oui assurément ! Mais j'aimerais maintenant passer au niveau au-dessus
-                            et devenir une vraie Nerd, dans le bon sens du terme ! Après mon bac, le BTS
-                            SIO s'est présenté comme une évidence. Avec 60% d'Informatique "pure", 13%
-                            d'Économie, management et droit de l'informatique, 9% d'Anglais, 9% de culture
-                            générale et 9% de Maths, je savais que cette formation allait me mettre le
-                            pied à l'étrier pour poursuivre ensuite dans cette voie et devenir
-                            informaticienne !
+                        <p>L'informatique est un domaine qui m'intéresse grandement depuis mon plus jeune âge, 
+                            inspiré par mon oncle, ingénieur dans ce domaine. J'ai toujours considéré ce milieu comme un hobby 
+                            à part entière sans jamais vraiment vouloir en faire mon métier. Ce n'est que très récemment, lors d'une réorientation 
+                            après l'obtention de mon BAC STMG spécialité Mercatique, que j'ai décidé d'en faire bien plus que mon hobby et de commencer 
+                            à me former sérieusement dans le but d'en faire ma profession. J'ai choisi le BTS "Service Informatique Aux Organisations" en 
+                            grande partie pour son accessibilité, mais aussi pour le côté professionnalisant qui s'éloigne des cours traditionnels dont je 
+                            commençais sérieusement à me lasser. Je suis déterminé à réussir cette formation pour ainsi atteindre mon objectif de devenir un informaticien
+                            aguerri !
                         </p>
                         <p><a class="btn btn-secondary" href="https://fr.wikipedia.org/wiki/Brevet_de_technicien_supérieur_-_Services_informatiques_aux_organisations" target="_blank" 
                               role="button">En savoir plus »</a>
