--- a/pages/appliandroid.html
+++ b/pages/appliandroid.html
@@ -25,7 +25,7 @@
                         data-target="#navbar" aria-controls="navbar">
                     <span class="sr-only">Navigation raccourcie</span>☰
                 </button>
-                <a class="navbar-brand" href="#">Mon portfolio</a>
+                <a class="navbar-brand" href="../index.html">Mon portfolio</a>
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
 
@@ -56,10 +56,10 @@
                                 <li role="presentation" class="dropdown-header dropdown-item">
                                     En autonomie</li>
                                 <li role="presentation" class="dropdown-item">
-                                    <a role="menuitem" href="#">Application Android</a>
+                                    <a role="menuitem" href="appandroid.html">Application Android</a>
                                 </li>
                                 <li role="presentation" class="dropdown-item">
-                                    <a role="menuitem" href="#">Site web</a>
+                                    <a role="menuitem" href="jeux.html">Jeux</a>
                                 </li>
                                 <li role="presentation" class="dropdown-item">
                                     <a role="menuitem" href="#">Études et analyses</a>
