--- a/pages/jeux.html
+++ b/pages/jeux.html
@@ -16,6 +16,7 @@
         <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
         <title>Portfolio de Ruben ALMEIDA ALHDADA (BTS SIO )</title>
     </head>
     <body>
@@ -25,7 +26,7 @@
                         data-target="#navbar" aria-controls="navbar">
                     <span class="sr-only">Navigation raccourcie</span>☰
                 </button>
-                <a class="navbar-brand" href="#">Mon portfolio</a>
+                <a class="navbar-brand" href="../index.html">Mon portfolio</a>
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
 
@@ -56,7 +57,7 @@
                                 <li role="presentation" class="dropdown-header dropdown-item">
                                     En autonomie</li>
                                 <li role="presentation" class="dropdown-item">
-                                    <a role="menuitem" href="#">Application Android</a>
+                                    <a role="menuitem" href="appliandroid.html">Application Android</a>
                                 </li>
                                 <li role="presentation" class="dropdown-item">
                                     <a role="menuitem" href="jeux.html">Jeux</a>
@@ -146,24 +147,40 @@
                     <div class="col-md-4">
                         <div class="card mb-4 shadow-sm">
                             <img class="card-img-top" src="../images/theReturn_gameplay.png" alt="Gameplay du jeu The Return">
+                            <h5 class='card-title'>The Return - Jeu textuel</h5>
                             <div class="card-body">
-                                <a class="card-text" href ="https://github.com/Ralh19/TheReturn.git">The Return - Jeu textuel</a>
+                                <p class="card-text">Texte descriptif a Rajouter...</p>
+                                <a class="card-text" href="https://fr.wikipedia.org/wiki/Unity_(moteur_de_jeu)"><img src="../images/unity2021.png" alt="Logo Unity 2021"/></a>
+                                <a class="card-text" href="https://fr.wikipedia.org/wiki/C_Sharp"><img src="../images/Csharp.png" alt="C# Logo"/></a>
+                                <a class="card-text" href="https://fr.wikipedia.org/wiki/Visual_Studio_Code"><img src="../images/vscode.png" alt="Visual Studio Code Logo"/></a>
+                                <a class="card-text" href ="https://github.com/Ralh19/TheReturn.git"><img src="../images/github.png" alt="Logo GitHub"/></a>
                             </div>
                         </div>
                     </div>
                     <div class="col-md-4">
                         <div class="card mb-4 shadow-sm">
                             <img class="card-img-top" src="../images/merlin_gameplay.png" alt="Gameplay du jeu Merlin's Demon War">
+                            <h5 class='card-title'>Merlin's Demon War - Jeu de carte interactif</h5>
                             <div class="card-body">
-                                <a class="card-text" href="https://github.com/Ralh19/Merlin-s-Demon-War.git"  >Merlin's Demon War - Jeu de carte interactif</a>
+                                <p class="card-text">Texte descriptif a Rajouter...</p>
+                                <a class="card-text" href="https://fr.wikipedia.org/wiki/Unity_(moteur_de_jeu)"><img src="../images/unity2021.png" alt="Logo Unity 2021"/></a>
+                                <a class="card-text" href="https://fr.wikipedia.org/wiki/C_Sharp"><img src="../images/Csharp.png" alt="C# Logo"/></a>
+                                <a class="card-text" href="https://fr.wikipedia.org/wiki/Visual_Studio_Code"><img src="../images/vscode.png" alt="Visual Studio Code Logo"/></a>
+                                <a class="card-text" href="https://fr.wikipedia.org/wiki/Krita"><img src="../images/krita.png" alt="Logo Krita"/></a>
+                                <a class="card-text" href="https://github.com/Ralh19/Merlin-s-Demon-War.git" ><img src="../images/github.png" alt="Logo GitHub"/></a>
                             </div>
                         </div>
                     </div>
                     <div class="col-md-4">
                         <div class="card mb-4 shadow-sm">
                             <img class="card-img-top" src="../images/androidSnake_gameplay.jpeg" alt="Gameplay du jeu snake sur mobile">
+                            <h5 class='card-title'>Snake - Jeu Android</h5>
                             <div class="card-body">
-                                <a class="card-text" href="https://github.com/Ralh19/SnakeGame.git">Snake - Jeu Mobile Arcade</a>
+                                <p class="card-text">Texte descriptif a Rajouter...</p>
+                                <a class="card-text" href="https://fr.wikipedia.org/wiki/Unity_(moteur_de_jeu)"><img src="../images/unity2021.png" alt="Logo Unity 2021"/></a>
+                                <a class="card-text" href="https://fr.wikipedia.org/wiki/C_Sharp"><img src="../images/Csharp.png" alt="C# Logo"/></a>
+                                <a class="card-text" href="https://fr.wikipedia.org/wiki/Visual_Studio_Code"><img src="../images/vscode.png" alt="Visual Studio Code Logo"/></a>
+                                <a class="card-text" href="https://github.com/Ralh19/SnakeGame.git"><img src="../images/github.png" alt="Logo GitHub"/></a>
                             </div>
                         </div>
                     </div>
