Images clickables de la page Jeux rajouter

--- a/pages/jeux.html
+++ b/pages/jeux.html
@@ -146,7 +146,7 @@
                 <div class="row">
                     <div class="col-md-4">
                         <div class="card mb-4 shadow-sm">
-                            <img class="card-img-top" src="../images/theReturn_gameplay.png" alt="Gameplay du jeu The Return">
+                            <a class="card-img-link" href="../images/theReturn_gameplay.png" ><img class="card-img-top" src="../images/theReturn_gameplay.png" alt="Gameplay du jeu The Return"></a>
                             <h5 class='card-title'>The Return - Jeu textuel</h5>
                             <div class="card-body">
                                 <p class="card-text">Texte descriptif a Rajouter...</p>
@@ -159,7 +159,7 @@
                     </div>
                     <div class="col-md-4">
                         <div class="card mb-4 shadow-sm">
-                            <img class="card-img-top" src="../images/merlin_gameplay.png" alt="Gameplay du jeu Merlin's Demon War">
+                            <a class="card-img-link" href="../images/merlin_gameplay.png" ><img class="card-img-top" src="../images/merlin_gameplay.png" alt="Gameplay du jeu Merlin's Demon War"></a>
                             <h5 class='card-title'>Merlin's Demon War - Jeu de carte interactif</h5>
                             <div class="card-body">
                                 <p class="card-text">Texte descriptif a Rajouter...</p>
@@ -173,7 +173,7 @@
                     </div>
                     <div class="col-md-4">
                         <div class="card mb-4 shadow-sm">
-                            <img class="card-img-top" src="../images/androidSnake_gameplay.jpeg" alt="Gameplay du jeu snake sur mobile">
+                            <a class="card-img-link" href="../images/androidSnake_gameplay.jpeg" ><img class="card-img-top" src="../images/androidSnake_gameplay.jpeg" alt="Gameplay du jeu snake sur mobile"></a>
                             <h5 class='card-title'>Snake - Jeu Android</h5>
                             <div class="card-body">
                                 <p class="card-text">Texte descriptif a Rajouter...</p>
