Texte descriptif TheReturn rajouter

--- a/pages/jeux.html
+++ b/pages/jeux.html
@@ -149,7 +149,14 @@
                             <a class="card-img-link" href="../images/theReturn_gameplay.png" ><img class="card-img-top" src="../images/theReturn_gameplay.png" alt="Gameplay du jeu The Return"></a>
                             <h5 class='card-title'>The Return - Jeu textuel</h5>
                             <div class="card-body">
-                                <p class="card-text">Texte descriptif a Rajouter...</p>
+                                <p class="card-text">
+                                    "The Return" est le premier projet que j'ai dû réaliser lors de ma formation. Il s'agit d'un jeu très simple avec des graphismes pas plus complexes qu'une invite de commande.
+                                    Le jeu est totalement textuel : vous suivez une histoire avec une mise en situation du lieu sur lequel vous vous trouvez, à partir du texte au milieu de l'écran. 
+                                    Vous évoluez sur une carte regroupant plusieurs lieux, tous plus ou moins reliés. Toute interaction, telle que se déplacer, utiliser, lire, etc.,
+                                    se fait à partir de commandes pouvant être saisies dans la zone de texte en bas de l'écran. Une commande "help" est mise à disposition pour afficher toutes les commandes possibles avec leurs variantes. 
+                                    Le but du jeu est donc d'interagir avec la carte jusqu'à atteindre la dernière zone et ainsi terminer le jeu. 
+                                    <br/>Ce projet m'a servi d'introduction à <a href="https://fr.wikipedia.org/wiki/Unity_(moteur_de_jeu)">Unity</a> ainsi qu'au language <a href="https://fr.wikipedia.org/wiki/C_Sharp">C#</a>. 
+                                </p>
                                 <a class="card-text" href="https://fr.wikipedia.org/wiki/Unity_(moteur_de_jeu)"><img src="../images/unity2021.png" alt="Logo Unity 2021"/></a>
                                 <a class="card-text" href="https://fr.wikipedia.org/wiki/C_Sharp"><img src="../images/Csharp.png" alt="C# Logo"/></a>
                                 <a class="card-text" href="https://fr.wikipedia.org/wiki/Visual_Studio_Code"><img src="../images/vscode.png" alt="Visual Studio Code Logo"/></a>
