Texte descriptif Merlin rajouter

--- a/pages/cv.html
+++ b/pages/cv.html
@@ -281,8 +281,8 @@
                                     <span class="badge badge-dark">A1</span>
                                     <span class="badge badge-dark">A2</span>
                                     <span class="badge badge-dark">B1</span>
-                                    <span class="badge badge-dark">B2</span>
-                                    <span class="badge badge-success">C1</span>
+                                    <span class="badge badge-success">B2</span>
+                                    <span class="badge badge-dark">C1</span>
                                     <span class="badge badge-dark">C2</span>
                                 </div>
                             </div>
