--- a/pages/jeux.html
+++ b/pages/jeux.html
@@ -169,7 +169,13 @@
                             <a class="card-img-link" href="../images/merlin_gameplay.png" ><img class="card-img-top" src="../images/merlin_gameplay.png" alt="Gameplay du jeu Merlin's Demon War"></a>
                             <h5 class='card-title'>Merlin's Demon War - Jeu de carte interactif</h5>
                             <div class="card-body">
-                                <p class="card-text">Texte descriptif a Rajouter...</p>
+                                <p class="card-text">
+                                    "Merlin's Demon War" est le second projet que j'ai réalisé durant ma formation. Il s'agit d'un jeu de cartes interactif opposant le joueur
+                                    à une intelligence artificielle. On y trouve un système de cartes offensives et passives avec des coûts de mana, ainsi que des animations différentes pour chaque carte.
+                                    En termes de mécaniques, le jeu se joue essentiellement en utilisant le "drag and drop". 
+                                    <br/>Ce projet m'a appris à manipuler des sprites, à réaliser mes premières animations à l'aide de scripts C#, 
+                                    et bien sûr, à découvrir d'avantage <a href="https://fr.wikipedia.org/wiki/Unity_(moteur_de_jeu)">Unity</a>.
+                                </p>
                                 <a class="card-text" href="https://fr.wikipedia.org/wiki/Unity_(moteur_de_jeu)"><img src="../images/unity2021.png" alt="Logo Unity 2021"/></a>
                                 <a class="card-text" href="https://fr.wikipedia.org/wiki/C_Sharp"><img src="../images/Csharp.png" alt="C# Logo"/></a>
                                 <a class="card-text" href="https://fr.wikipedia.org/wiki/Visual_Studio_Code"><img src="../images/vscode.png" alt="Visual Studio Code Logo"/></a>
