Texte descriptif Snake rajouter

--- a/pages/jeux.html
+++ b/pages/jeux.html
@@ -189,7 +189,13 @@
                             <a class="card-img-link" href="../images/androidSnake_gameplay.jpeg" ><img class="card-img-top" src="../images/androidSnake_gameplay.jpeg" alt="Gameplay du jeu snake sur mobile"></a>
                             <h5 class='card-title'>Snake - Jeu Android</h5>
                             <div class="card-body">
-                                <p class="card-text">Texte descriptif a Rajouter...</p>
+                                <p class="card-text">
+                                    "Snake" a été le dernier projet que j'ai réalisé lors de ma formation et certainement l'un des plus intéressants à mes yeux. Celui-ci a été développé pour les appareils Android,
+                                    ce qui en fait ma première application mobile. Le concept de Snake est un jeu emblématique datant déjà de 1976. Le principe de cette version revisitée est de contrôler un serpent constamment en mouvement à l'aide de gestes "swipe".
+                                    Le but est de collecter des œufs en les touchant avec la tête du serpent. Ce dernier grandira à chaque fois qu'il mangera un œuf, augmentant ainsi la difficulté à chaque étape. Après un certain nombre d'œufs ingérés, un œuf doré apparaîtra. 
+                                    Le fait de l'ingérer fera passer au niveau suivant, ajoutant à chaque fois un "spike" qui tuera le serpent au contact, tout comme les bordures de l'écran. Le but sera donc d'obtenir le score le plus élevé possible sans atteindre une fin réelle.
+                                    <br/> Ce projet m'a énormément plu car j'ai pu expérimenter la conception de ma première application mobile, mais aussi configurer des "hitbox" et ainsi jouer avec la collision.
+                                </p>
                                 <a class="card-text" href="https://fr.wikipedia.org/wiki/Unity_(moteur_de_jeu)"><img src="../images/unity2021.png" alt="Logo Unity 2021"/></a>
                                 <a class="card-text" href="https://fr.wikipedia.org/wiki/C_Sharp"><img src="../images/Csharp.png" alt="C# Logo"/></a>
                                 <a class="card-text" href="https://fr.wikipedia.org/wiki/Visual_Studio_Code"><img src="../images/vscode.png" alt="Visual Studio Code Logo"/></a>
