--- a/pages/certif.html
+++ b/pages/certif.html
@@ -56,19 +56,16 @@
                                 <li role="presentation" class="dropdown-header dropdown-item">
                                     En autonomie</li>
                                 <li role="presentation" class="dropdown-item">
-                                    <a role="menuitem" href="appliandroid.html">Application Android</a>
+                                    <a role="menuitem" href="../pages/certif.html">Certifications</a>
                                 </li>
                                 <li role="presentation" class="dropdown-item">
                                     <a role="menuitem" href="jeux.html">Jeux</a>
-                                </li>
-                                <li role="presentation" class="dropdown-item">
-                                    <a role="menuitem" href="#">Études et analyses</a>
                                 </li>
                                 <li role="presentation" class="dropdown-divider"></li>
                                 <li role="presentation" class="dropdown-header dropdown-item">
                                     En entreprise</li>
                                 <li role="presentation" class="dropdown-item">
-                                    <a role="menuitem" href="#">Projet de 1ère année</a>
+                                    <a role="menuitem" href="preannee.html">Projet de 1ère année</a>
                                 </li>
                                 <li role="presentation" class="dropdown-item">
                                     <a role="menuitem" href="#">Projet de 2ème année</a>
@@ -138,27 +135,27 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="section-header text-center">
-                            <h2>Our Portfolio</h2>
-                            <p>Check Out Our Latest Works</p>
+                            <h2>Certifications</h2>
+                            <p>Toutes les certifications obtenues jusqu'à maintenant.</p>
                         </div>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-lg-4 col-sm-12">
+                    <div class="col-lg-6 col-sm-12">
                         <div class="gallery-item" data-bs-target="#popup1" data-bs-toggle="modal">
                             <img alt="Image 1" src="../images/xamk.jpg">
                             <div class="overlay">
-                                <h3>Portfolio Template</h3>
-                                <p>Lorem ipsum dolor sit amet</p><a class="btn btn-primary" href="#">Learn More</a>
+                                <h3>Certificat "Gold" Introduction a la creation de Jeux Videos (Online 25 ECTS)</h3>
+                                <p></p><a class="btn btn-primary" href="#">Voir plus</a>
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-sm-12">
+                    <div class="col-lg-6 col-sm-12">
                         <div class="gallery-item" data-bs-target="#popup2" data-bs-toggle="modal">
                             <img alt="Image 2" src="../images/anssi.jpg">
                             <div class="overlay">
-                                <h3>Business Template</h3>
-                                <p>Lorem ipsum dolor sit amet</p><a class="btn btn-primary" href="#">Learn More</a>
+                                <h3>MOOC - SecNum Academie ANSSI</h3>
+                                <p></p><a class="btn btn-primary" href="#">Voir plus</a>
                             </div>
                         </div>
                     </div>
@@ -189,7 +186,7 @@
                             notamment dans le développement, qui est le sujet qui m'intéresse le plus.
                             Cette formation va aussi contribuer a me professionnaliser au maximum 
                             afin d'être le plus compétent possible lors de mon ascension dans le monde du travail.
-                        <p><a class="btn btn-secondary" href="http://www.cned.fr" target="_blank"
+                        <p><a class="btn btn-secondary" href="https://bts-sio.lyc-bonaparte.fr/" target="_blank"
                               role="button">En savoir plus »</a>
                         </p>
                     </div>
