--- a/pages/cv.html
+++ b/pages/cv.html
@@ -57,19 +57,16 @@
                                 <li role="presentation" class="dropdown-header dropdown-item">
                                     En autonomie</li>
                                 <li role="presentation" class="dropdown-item">
-                                    <a role="menuitem" href="appliandroid.html">Application Android</a>
+                                    <a role="menuitem" href="../pages/certif.html">Certifications</a>
                                 </li>
                                 <li role="presentation" class="dropdown-item">
                                     <a role="menuitem" href="jeux.html">Jeux</a>
-                                </li>
-                                <li role="presentation" class="dropdown-item">
-                                    <a role="menuitem" href="#">Études et analyses</a>
                                 </li>
                                 <li role="presentation" class="dropdown-divider"></li>
                                 <li role="presentation" class="dropdown-header dropdown-item">
                                     En entreprise</li>
                                 <li role="presentation" class="dropdown-item">
-                                    <a role="menuitem" href="#">Projet de 1ère année</a>
+                                    <a role="menuitem" href="preannee.html">Projet de 1ère année</a>
                                 </li>
                                 <li role="presentation" class="dropdown-item">
                                     <a role="menuitem" href="#">Projet de 2ème année</a>
@@ -352,7 +349,7 @@
                             afin d'être le plus compétent possible lors de mon ascension dans le monde du travail.
 
                         </p>
-                        <p><a class="btn btn-secondary" href="http://www.cned.fr" target="_blank"
+                        <p><a class="btn btn-secondary" href="https://bts-sio.lyc-bonaparte.fr/" target="_blank"
                               role="button">En savoir plus »</a>
                         </p>
                     </div>
