Fix de l'alignement de la préésentation avec le footer et la navbar

--- a/index.html
+++ b/index.html
@@ -1,26 +1,35 @@
 <!DOCTYPE html>
 <html lang="fr-FR">
+
     <head>
         <!-- Required meta tags -->
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta name="description" content="Portfolio de Ruben ALMEIDA ALHADA - BTS SIO">
-        <meta name="author" content =" Ruben ALMEIDA ALHADA">
+        <meta name="author" content=" Ruben ALMEIDA ALHADA">
         <link rel="icon" href="favicon.ico">
         <!-- Bootstrap CSS -->
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
+            integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
         <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
         <!-- JavaScript-->
-        <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+        <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+            integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+            crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+            integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+            crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js"
+            integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+            crossorigin="anonymous"></script>
         <title>Portfolio de Ruben ALMEIDA ALHDADA (BTS SIO )</title>
     </head>
+
     <body>
         <nav class="navbar navbar-dark bg-dark fixed-top navbar-expand-md">
             <div class="container">
-                <button type="button" class="navbar-toggler" data-toggle="collapse"
-                        data-target="#navbar" aria-controls="navbar">
+                <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbar"
+                    aria-controls="navbar">
                     <span class="sr-only">Navigation raccourcie</span>☰
                 </button>
                 <a class="navbar-brand" href="index.html">Mon portfolio</a>
@@ -46,8 +55,7 @@
                         <!---------------------------------------Bouton "Déroulant Réalisation" --------------------------------------------------------->
 
                         <li class="dropdown nav-item">
-                            <a href="#" class="dropdown-toggle nav-link"
-                               data-toggle="dropdown" role="button">
+                            <a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown" role="button">
                                 <span class="fa fa-list-alt"></span> Réalisations <span class="caret"></span>
                             </a>
                             <ul class="dropdown-menu" role="menu">
@@ -74,8 +82,7 @@
                         <!--------------------------------------------------- Bouton Déroulant "Jury E5 BTS SIO" --------------------------------------------------------------------->
 
                         <li class="dropdown nav-item">
-                            <a href="#" class="dropdown-toggle nav-link"
-                               data-toggle="dropdown" role="button">
+                            <a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown" role="button">
                                 <span class="fa fa-graduation-cap"></span>
                                 Jury E5 BTS SIO
                                 <span class="caret"></span>
@@ -84,34 +91,44 @@
                                 <li class="dropdown-header dropdown-item" role="presentation">
                                     Documentations contexte</li>
                                 <li role="presentation" class="dropdown-item">
-                                    <a role="menuitem" href="#">Présentation</a></li>
+                                    <a role="menuitem" href="#">Présentation</a>
+                                </li>
                                 <li role="presentation" class="dropdown-item">
-                                    <a role="menuitem" href="#">Application</a></li>
+                                    <a role="menuitem" href="#">Application</a>
+                                </li>
                                 <li role="presentation" class="dropdown-item">
-                                    <a role="menuitem" href="#">Missions à réaliser</a></li>
+                                    <a role="menuitem" href="#">Missions à réaliser</a>
+                                </li>
                                 <li role="presentation" class="dropdown-item">
-                                    <a role="menuitem" href="#">Annexes</a></li>
+                                    <a role="menuitem" href="#">Annexes</a>
+                                </li>
                                 <li role="presentation" class="dropdown-divider"></li>
                                 <li role="presentation" class="dropdown-header dropdown-item">
                                     Fiches d'examen</li>
                                 <li role="presentation" class="dropdown-item">
-                                    <a role="menuitem" href="#">Situation professionnelle n°1</a></li>
+                                    <a role="menuitem" href="#">Situation professionnelle n°1</a>
+                                </li>
                                 <li role="presentation" class="dropdown-item">
-                                    <a role="menuitem" href="#">Situation professionnelle n°2</a></li>
+                                    <a role="menuitem" href="#">Situation professionnelle n°2</a>
+                                </li>
                                 <li role="presentation" class="dropdown-divider"></li>
                                 <li role="presentation" class="dropdown-header dropdown-item">
                                     Démonstrations</li>
                                 <li role="presentation" class="dropdown-item">
-                                    <a role="menuitem" href="#">Démo SP n°1</a></li>
+                                    <a role="menuitem" href="#">Démo SP n°1</a>
+                                </li>
                                 <li role="presentation" class="dropdown-item">
-                                    <a role="menuitem" href="#">Démo SP n°2</a></li>
+                                    <a role="menuitem" href="#">Démo SP n°2</a>
+                                </li>
                                 <li role="presentation" class="dropdown-divider"></li>
                                 <li role="presentation" class="dropdown-header dropdown-item">
                                     Codes sources</li>
                                 <li role="presentation" class="dropdown-item">
-                                    <a role="menuitem" href="#">Sources SP n°1</a></li>
+                                    <a role="menuitem" href="#">Sources SP n°1</a>
+                                </li>
                                 <li role="presentation" class="dropdown-item">
-                                    <a role="menuitem" href="#">Sources SP n°2</a></li>
+                                    <a role="menuitem" href="#">Sources SP n°2</a>
+                                </li>
                             </ul>
                         </li>
 
@@ -129,7 +146,7 @@
 
         <!------------------------------------------------ Contenu principal ------------------------------------------------->
 
-        <div class="jumbotron">
+        <!-- <div class="jumbotron">
             <h1>Ruben ALMEIDA ALHADA - Portfolio </h1> 
             <div class="row">
                 <div class="col-lg-1">
@@ -148,7 +165,29 @@
 
                 </div>
             </div>
-        </div>   
+        </div>    -->
+
+        <div class="jumbotron">
+            <div class="container">
+                <div class="row align-items-center">
+                    <div class="col-lg-2">
+                        <img src="images/ruben.jpg" class="img-thumbnail" alt="Photo de Ruben ALMEIDA ALHADA souriant">
+                    </div>
+                    <div class="col-lg-10">
+                        <h1>Ruben ALMEIDA ALHADA - Portfolio </h1>
+                        <p>Je m'appelle Ruben ALMEIDA ALHADA, j'ai 19 ans et ce site a pour vocation de me présenter en
+                            tant que personne, en
+                            tant qu'étudiant et candidat à l'obtention du BTS SIO (Services Informatiques aux
+                            Organisations) et en tant
+                            que futur professionnel de l'informatique.
+                        </p>
+                        <p><a class="btn btn-primary" href="#" target="_blank" role="button">En savoir plus »</a></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
 
         <!------------------------------------------------------------ Pied de page  ------------------------------------------------------------------------------------------------->
 
@@ -157,43 +196,51 @@
                 <div class="row">
                     <div class="col-lg-4">
                         <h2>Étudiant au Lycée Bonaparte - Toulon</h2>
-                        <p>J'ai choisi de suivre le BTS SIO au Lycée Bonaparte, situé dans la ville de Toulon, 
-                            dans le but d'élargir mes connaissances dans le domaine de l'informatique, 
+                        <p>J'ai choisi de suivre le BTS SIO au Lycée Bonaparte, situé dans la ville de Toulon,
+                            dans le but d'élargir mes connaissances dans le domaine de l'informatique,
                             notamment dans le développement, qui est le sujet qui m'intéresse le plus.
-                            Cette formation va aussi contribuer a me professionnaliser au maximum 
+                            Cette formation va aussi contribuer a me professionnaliser au maximum
                             afin d'être le plus compétent possible lors de mon ascension dans le monde du travail.
 
                         </p>
                         <p><a class="btn btn-secondary" href="https://bts-sio.lyc-bonaparte.fr/" target="_blank"
-                              role="button">En savoir plus »</a>
+                                role="button">En savoir plus »</a>
                         </p>
                     </div>
                     <div class="col-lg-4">
                         <h2>Le BTS SIO</h2>
-                        <p>L'informatique est un domaine qui m'intéresse grandement depuis mon plus jeune âge, 
-                            inspiré par mon oncle, ingénieur dans ce domaine. J'ai toujours considéré ce milieu comme un hobby 
-                            à part entière sans jamais vraiment vouloir en faire mon métier. Ce n'est que très récemment, lors d'une réorientation 
-                            après l'obtention de mon BAC STMG spécialité Mercatique, que j'ai décidé d'en faire bien plus que mon hobby et de commencer 
-                            à me former sérieusement dans le but d'en faire ma profession. J'ai choisi le BTS "Service Informatique Aux Organisations" en 
-                            grande partie pour son accessibilité, mais aussi pour le côté professionnalisant qui s'éloigne des cours traditionnels dont je 
-                            commençais sérieusement à me lasser. Je suis déterminé à réussir cette formation pour ainsi atteindre mon objectif de devenir un informaticien
+                        <p>L'informatique est un domaine qui m'intéresse grandement depuis mon plus jeune âge,
+                            inspiré par mon oncle, ingénieur dans ce domaine. J'ai toujours considéré ce milieu comme un
+                            hobby
+                            à part entière sans jamais vraiment vouloir en faire mon métier. Ce n'est que très
+                            récemment, lors d'une réorientation
+                            après l'obtention de mon BAC STMG spécialité Mercatique, que j'ai décidé d'en faire bien
+                            plus que mon hobby et de commencer
+                            à me former sérieusement dans le but d'en faire ma profession. J'ai choisi le BTS "Service
+                            Informatique Aux Organisations" en
+                            grande partie pour son accessibilité, mais aussi pour le côté professionnalisant qui
+                            s'éloigne des cours traditionnels dont je
+                            commençais sérieusement à me lasser. Je suis déterminé à réussir cette formation pour ainsi
+                            atteindre mon objectif de devenir un informaticien
                             aguerri !
                         </p>
-                        <p><a class="btn btn-secondary" href="https://fr.wikipedia.org/wiki/Brevet_de_technicien_supérieur_-_Services_informatiques_aux_organisations" target="_blank" 
-                              role="button">En savoir plus »</a>
+                        <p><a class="btn btn-secondary"
+                                href="https://fr.wikipedia.org/wiki/Brevet_de_technicien_supérieur_-_Services_informatiques_aux_organisations"
+                                target="_blank" role="button">En savoir plus »</a>
                         </p>
                     </div>
                     <div class="col-lg-4">
                         <h2>Option B SLAM</h2>
-                        <p> En fin de premier semestre, on doit choisir notre option. "Solutions 
+                        <p> En fin de premier semestre, on doit choisir notre option. "Solutions
                             Logicielles et Applications Métiers" est l'option qui m'a séduit&nbsp;!
-                            L'une de mes principales motivations à choisir cette option était par rapport 
-                            à mon fort intérêt pour la programmation, dont j'ai fait l'expérience durant 1an de 
-                            formation à distance sur le développement de jeux vidéo, ce qui m'a fait adorer ce domaine. 
+                            L'une de mes principales motivations à choisir cette option était par rapport
+                            à mon fort intérêt pour la programmation, dont j'ai fait l'expérience durant 1an de
+                            formation à distance sur le développement de jeux vidéo, ce qui m'a fait adorer ce domaine.
                             Mon choix n'a donc pas été très difficile.
                         </p>
-                        <p><a class="btn btn-secondary" href="https://www.onisep.fr/Ressources/Univers-Formation/Formations/Post-bac/bts-services-informatiques-aux-organisations-option-b-solutions-logicielles-et-applications-metiers" target="_blank" 
-                              role="button">En savoir plus »</a>
+                        <p><a class="btn btn-secondary"
+                                href="https://www.onisep.fr/Ressources/Univers-Formation/Formations/Post-bac/bts-services-informatiques-aux-organisations-option-b-solutions-logicielles-et-applications-metiers"
+                                target="_blank" role="button">En savoir plus »</a>
                         </p>
                     </div>
                 </div>
@@ -203,4 +250,5 @@
             </div>
         </footer>
     </body>
+
 </html>
